--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="shortcut icon" href="./public/image/Group 29.svg" type="image/x-icon">
   <link
-    href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Poppins:wght@400;600;700&family=Quicksand:wght@400;500;700&family=Roboto+Serif:opsz,wght@8..144,700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Paytone+One:wght@100;400;600;700&family=Poppins:wght@400;600;700&family=Quicksand:wght@400;500;700&family=Roboto+Serif:opsz,wght@8..144,700&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
   <title>Mermãs Digitais</title>
