--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="shortcut icon"
+      href="./public/assets/logo.svg"
+      type="image/x-icon"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Paytone+One:wght@100;400;600;700&family=Poppins:wght@400;600;700&family=Quicksand:wght@400;500;700&family=Roboto+Serif:opsz,wght@8..144,700&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mermãs Digitais</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="shortcut icon" href="./public/assets/logo.svg" type="image/x-icon">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Paytone+One:wght@100;400;600;700&family=Poppins:wght@400;600;700&family=Quicksand:wght@400;500;700&family=Roboto+Serif:opsz,wght@8..144,700&display=swap"
-    rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
-  <title>Mermãs Digitais</title>
-  
-</head>
-
-<body class="bg-star bg-contain text-purple-900 font-quicksand">
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body class="bg-star bg-contain text-purple-900 font-quicksand">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
