fix:name description

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
   <title>Mermãs Digitais</title>
-  <meta name="desciption" content="Projeto de extensão do IFMA - Campus Imperatriz, parceiro do Programa Meninas Digitais da Sociedade Brasileira de Computação, que tem o objetivo incentivar e apoia meninas do ensino médio da rede pública à despertar o interesse nos cursos de Computação e tecnologias relacionadas."/>
+  <meta name="description" content="Projeto de extensão do IFMA - Campus Imperatriz, parceiro do Programa Meninas Digitais da Sociedade Brasileira de Computação, que tem o objetivo incentivar e apoia meninas do ensino médio da rede pública à despertar o interesse nos cursos de Computação e tecnologias relacionadas."/>
   <meta name="keywords" content="Educação, Tecnologia, STEAM, Inovação">
   <meta name="author" content="Mermãs Digitais">
   // Open Graph
