--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head lang="pt-br">
   <meta charset="UTF-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
   <meta property="og:site_name" content="Mermãs Digitais" />
   <meta property="og:locale" content="pt_BR" />
 
-  <meta property="og:image" content="./public/assets/og.jpg" />
+  <meta property="og:image" content="/assets/og.png" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" /> 
