--- a/index.html
+++ b/index.html
@@ -15,22 +15,18 @@
   <meta name="description" content="Projeto de extensão do IFMA - Campus Imperatriz, parceiro do Programa Meninas Digitais da Sociedade Brasileira de Computação, que tem o objetivo incentivar e apoia meninas do ensino médio da rede pública à despertar o interesse nos cursos de Computação e tecnologias relacionadas."/>
   <meta name="keywords" content="Educação, Tecnologia, STEAM, Inovação">
   <meta name="author" content="Mermãs Digitais">
-  // Open Graph
   <meta property="og:title" content="Mermãs Digitais" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mermasdigitais.com.br/" />
-  <meta property="og:description" content="Incentivamos meninas a mergulharem no universo tecnologico e se tornarem mestres do seu conhecimento" />
-  <meta property="og:site_name" content="Mermãs Digitais" />
+  <meta property="og:description" content="Incentivamos meninas a mergulharem no universo tecnologico e se tornarem mestres do seu conhecimento." />
+  <meta property="og:site_name" content="Mermãs Digitais | IFMA" />
   <meta property="og:locale" content="pt_BR" />
 
-  <meta property="og:image" content="/assets/og.png" />
+  <meta property="og:image" content="https://mermasdigitais.com.br/assets/og.png" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" /> 
   <meta property="og:image:alt" content="Website da Mermãs Digitais" />
-
-  
-
 </head>
 
   <body class="bg-star bg-contain text-purple-900 font-quicksand">
