--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="/favicon.ico" sizes="any" />
   <link rel="shortcut icon" href="./public/assets/logo.svg" type="image/x-icon">
   <link
     href="https://fonts.googleapis.com/css2?family=Paytone+One:wght@100;400;600;700&family=Poppins:wght@400;600;700&family=Quicksand:wght@400;500;700&family=Roboto+Serif:opsz,wght@8..144,700&display=swap"
@@ -27,6 +28,8 @@
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" /> 
   <meta property="og:image:alt" content="Website da Mermãs Digitais" />
+
+  
 </head>
 
   <body class="bg-star bg-contain text-purple-900 font-quicksand">
