--- a/index.html
+++ b/index.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+  <head lang="pt-br">
+    <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link
+      rel="shortcut icon"
+      href="./public/assets/logo.svg"
+      type="image/x-icon"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Paytone+One:wght@100;400;600;700&family=Poppins:wght@400;600;700&family=Quicksand:wght@400;500;700&family=Roboto+Serif:opsz,wght@8..144,700&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mermãs Digitais</title>
+    <meta name="title" content="Mermãs Digitais" />
+    <meta
+      name="description"
+      content="Projeto de extensão do IFMA - Campus Imperatriz, parceiro do Programa Meninas Digitais da Sociedade Brasileira de Computação, que tem o objetivo incentivar e apoia meninas do ensino médio da rede pública à despertar o interesse nos cursos de Computação e tecnologias relacionadas."
+    />
+    <meta name="keywords" content="Educação, Tecnologia, STEAM, Inovação" />
+    <meta name="author" content="Mermãs Digitais" />
+    <meta property="og:title" content="Mermãs Digitais" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mermasdigitais.com.br/" />
+    <meta
+      property="og:description"
+      content="Incentivamos meninas a mergulharem no universo tecnologico e se tornarem mestres do seu conhecimento."
+    />
+    <meta property="og:site_name" content="Mermãs Digitais | IFMA" />
+    <meta property="og:locale" content="pt_BR" />
 
-<head lang="pt-br">
-  <meta charset="UTF-8" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="icon" href="/favicon.ico" sizes="any" />
-  <link rel="shortcut icon" href="./public/assets/logo.svg" type="image/x-icon">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Paytone+One:wght@100;400;600;700&family=Poppins:wght@400;600;700&family=Quicksand:wght@400;500;700&family=Roboto+Serif:opsz,wght@8..144,700&display=swap"
-    rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
-  <title>Mermãs Digitais</title>
-  <meta name="description" content="Projeto de extensão do IFMA - Campus Imperatriz, parceiro do Programa Meninas Digitais da Sociedade Brasileira de Computação, que tem o objetivo incentivar e apoia meninas do ensino médio da rede pública à despertar o interesse nos cursos de Computação e tecnologias relacionadas."/>
-  <meta name="keywords" content="Educação, Tecnologia, STEAM, Inovação">
-  <meta name="author" content="Mermãs Digitais">
-  <meta property="og:title" content="Mermãs Digitais" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://mermasdigitais.com.br/" />
-  <meta property="og:description" content="Incentivamos meninas a mergulharem no universo tecnologico e se tornarem mestres do seu conhecimento." />
-  <meta property="og:site_name" content="Mermãs Digitais | IFMA" />
-  <meta property="og:locale" content="pt_BR" />
-
-  <meta property="og:image" content="https://mermasdigitais.com.br/assets/og.png" />
-  <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="400" />
-  <meta property="og:image:height" content="300" /> 
-  <meta property="og:image:alt" content="Website da Mermãs Digitais" />
-
-  
-</head>
+    <meta
+      property="og:image"
+      content="https://mermasdigitais.com.br/assets/og.png"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:alt" content="Website da Mermãs Digitais" />
+    <script src="//code.jivosite.com/widget/oCHLatEDsf" async></script>
+  </head>
   <body class="bg-star bg-contain text-purple-900 font-quicksand">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
